--- a/meet-the-need/app/assets/stylesheets/homepage.scss
+++ b/meet-the-need/app/assets/stylesheets/homepage.scss
@@ -29,6 +29,7 @@ main {
   font-size: 2em;
   padding-left: .5em;
   margin-right: .5em;
+  line-height: 1.57em;
 }
 
 input[type=submit] {
